[project]
name = "cache-zen-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "langgraph-cli[inmem]>=0.3.3",
    "numpy>=2.3.1",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
